package A3_5;

public interface Component {
    public void accept(Visitor v);
}
