package A3_5;

public interface Visitor {
    public void visit(Book b);
    public void visit(Category c);
}
